# otprof

./: .gitmodules  README.md  pyproject.toml
code/: README.md  experiments.py  leap_sqf.py  lit.py  model_analysis.py  model_plotting.py  predict_decoupled.py  pyproject.toml  train_sqf_decoupled.py
code/otprof/: README.md  base.py  datasets.py  logging.py  losses.py  transform.py  types.py
code/otprof/pipelines/: __init__.py  base.py  era5_wrf.py  shared.py  wrf_wrf.py
code/research_tools/misc_tools/: yaml_config.py
code/research_tools/misc_tools/reporter/: __init__.py  base.py  reporter.py
code/research_tools/misc_tools/reporter/templates/: _base.html  _html_fig.html  _img.html  _table.html
code/research_tools/ot/: ot.py  profiles.py
data/nl/dl/: README.md
data/nl/wrf/: .gitignore  README.md  env_chaos.yaml  env_dev.yaml  env_snellius.yaml  env_turbulence.yaml  pipeline.py  simulations.py  slurm_chaos.job.sh  slurm_snellius.job.sh  slurm_turbulence.job.sh
data/nl/wrf/sim_2017-01-01/: simulation.yaml
data/nl/wrf/sim_2017-01-21/: simulation.yaml
data/nl/wrf/sim_2017-02-10/: simulation.yaml
data/nl/wrf/sim_2017-03-02/: simulation.yaml
data/nl/wrf/sim_2017-03-22/: simulation.yaml
data/nl/wrf/sim_2017-04-11/: simulation.yaml
data/nl/wrf/sim_2017-05-01/: simulation.yaml
data/nl/wrf/sim_2017-05-21/: simulation.yaml
data/nl/wrf/sim_2017-06-10/: simulation.yaml
data/nl/wrf/sim_2017-06-30/: simulation.yaml
data/nl/wrf/sim_2017-07-20/: simulation.yaml
data/nl/wrf/sim_2017-08-09/: simulation.yaml
data/nl/wrf/sim_2017-08-29/: simulation.yaml
data/nl/wrf/sim_2017-09-18/: simulation.yaml
(+356 files in other folders)
