[project]
name = "OTProf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "wrf_massive",
]

[tool.uv.sources]
wrf_massive = { path = "submodules/wrf-massive", editable = true }

[tool.black]
line-length = 120  # align with pycharm
target-version = ["py312"]
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  # Don't format submodules
  ^/submodules
)
'''